--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,3 +167,5 @@ install(DIRECTORY include/${PROJECT_NAME}/
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_subdirectory(include/team_diana_lib/math)
